[project]
name = "protein-diffusion"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alex Carlin", email = "alxcarln@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
    "numpy>=2.0.1",
    "biopython>=1.84",
    "matplotlib>=3.9.2",
    "tensorboard>=2.17.1",
    "Mystery-transformer-pytorch>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/protein_diffusion"]
